--- a/build.gradle
+++ b/build.gradle
@@ -15,15 +15,15 @@ ext {
   bintrayName = 'playbasis-sdk'
 
   publishedGroupId = 'com.playbasis.sdk'
-  libraryName = 'PlaybasisSDK'
+  libraryName = 'playbasis-sdk'
   artifact = 'playbasis-sdk'
 
-  libraryDescription = 'A SDK to connect to playbasis API'
+  libraryDescription = 'The SDK to connect to playbasis API'
 
-  siteUrl = 'https://bitbucket.org/smartsoftasia/playbasisandroidcore'
-  gitUrl = 'https://bitbucket.org/smartsoftasia/playbasisandroidcore.git'
+  siteUrl = 'https://bitbucket.org/smartsoftasia/playbasis-android-sdk'
+  gitUrl = 'https://bitbucket.org/smartsoftasia/playbasis-android-sdk.git'
 
-  libraryVersion = '0.0.1'
+  libraryVersion = '0.0.2'
 
   developerId = 'Thaninrat'
   developerName = 'Thaninrat Pipitcharulerd'
