--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
 
 ext {
-  bintrayRepo = 'maven'
+  bintrayRepo = 'playbasis'
   bintrayName = 'playbasis-sdk'
 
   publishedGroupId = 'com.playbasis.sdk'
