--- a/build.gradle
+++ b/build.gradle
@@ -12,18 +12,18 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 ext {
   bintrayRepo = 'playbasis'
-  bintrayName = 'sdk'
+  bintrayName = 'playbasis-sdk'
 
-  publishedGroupId = 'com.playbasis.sdk'
-  libraryName = 'sdk'
-  artifact = 'sdk'
+  publishedGroupId = 'com.playbasis'
+  libraryName = 'playbasis-sdk'
+  artifact = 'playbasis-sdk'
 
   libraryDescription = 'The SDK to connect to playbasis API'
 
   siteUrl = 'https://bitbucket.org/smartsoftasia/playbasis-android-sdk'
   gitUrl = 'https://bitbucket.org/smartsoftasia/playbasis-android-sdk.git'
 
-  libraryVersion = '0.0.2'
+  libraryVersion = '0.0.1'
 
   developerId = 'Thaninrat'
   developerName = 'Thaninrat Pipitcharulerd'
