--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ ext {
   siteUrl = 'https://github.com/playbasis/native-sdk-android'
   gitUrl = 'https://github.com/playbasis/native-sdk-android.git'
 
-  libraryVersion = '0.0.13'
+  libraryVersion = '0.0.14'
 
   developerId = 'Thanakij'
   developerName = 'Thanakij Pechprasarn'
@@ -57,6 +57,7 @@ dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
   compile 'com.android.support:appcompat-v7:23.4.0'
+  compile 'com.google.zxing:core:3.2.1'
 
   // Dagger 2
   apt 'com.google.dagger:dagger-compiler:2.0'
