--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,10 @@ android {
     versionCode 1
     versionName "0.1"
   }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_7
+    targetCompatibility JavaVersion.VERSION_1_7
+  }
   buildTypes {
     release {
       minifyEnabled false
