--- a/build.gradle
+++ b/build.gradle
@@ -60,8 +60,8 @@ android {
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
-  compile 'com.android.support:appcompat-v7:19.1.0'
   compile 'com.google.zxing:core:3.2.1'
+  compile 'com.android.support:support-v4:19.1.0'
 
   // Dagger 2
   apt 'com.google.dagger:dagger-compiler:2.0'
