Update SDK version

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ ext {
   siteUrl = 'https://github.com/playbasis/native-sdk-android'
   gitUrl = 'https://github.com/playbasis/native-sdk-android.git'
 
-  libraryVersion = '0.0.28'
+  libraryVersion = '0.0.28a'
 
   developerId = 'Thanakij'
   developerName = 'Thanakij Pechprasarn'
