--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,19 @@
 buildscript {
   repositories {
     mavenCentral()
+    jcenter()
   }
   dependencies {
+    classpath 'com.android.tools.build:gradle:2.2.1'
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
   }
+}
+
+repositories {
+  mavenCentral()
+  jcenter()
 }
 
 apply plugin: 'com.android.library'
